--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="author" content"Donny McKercher">
+  <meta name="author" content="Donny McKercher">
   <meta name="description" content="Multi-purpose template site">
 
   <!-- Open Graph (Facebook meta)
@@ -18,12 +18,127 @@
 
   //Google+ Schema.org
   -->
+  <!-- CDN -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-  <link rel="stylesheet" href="css/main.min.css>
+  <!-- Favicon -->
 
-  <title>reUsableTemplate</title>
+  <link rel="stylesheet" href="css/main.min.css">
+  <link rel="stylesheet" href="css/onepage-scroll.css">
+
+
+  <title>Place Holder Name</title>
+
 </head>
 <body>
-  <h1>Hello FooBar</h1>
+
+<div class="main">
+
+  <div id="header" class="section">
+    <div class="overlay">
+      <div id="logo">
+        <img src="img/logo/globe.svg" alt="Logo">
+      </div>
+
+      <div class="sectionHeader">
+        <h1>Template Header</h1>
+      </div>
+
+      <!--
+      <div id="nav">
+        <div id="menuIcon">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+
+        <ul id="links">
+          <li><a href="#header">Home</a></li>
+          <li><a href="#secondSection">About</a></li>
+          <li><a href="#thirdSection">Service</a></li>
+          <li><a href="#footer">Contact</a></li>
+        </ul>
+      </div>
+      -->
+
+      <div class="blurb">
+        <h2>Section Header</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus molestiae voluptatibus fuga incidunt, odio, repellendus, natus, provident accusamus vel facilis magni. Adipisci a at, aperiam officia cumque est modi sequi, voluptates molestiae maiores error, ex! Quae tempora quis accusantium laborum deleniti optio dolore magnam consequatur illum fuga, rem! Dolores facilis eius accusamus optio, quod perferendis harum obcaecati dolor! At in nisi magnam consequuntur sed impedit officia mollitia explicabo exercitationem eligendi, quod atque iusto rerum expedita quia vitae, illo itaque omnis doloribus. Quis assumenda cupiditate facilis, doloremque voluptatum hic eaque adipisci, sunt officia, ratione dicta sint culpa nihil, iusto facere repellendus.</p>
+        <button class="btn one">Button</button>
+        <button class="btn two">Button</button>
+        <button class="btn three">Button</button>
+        <button class="btn four">Button</button>
+      </div>
+    </div>
+  </div>
+
+
+
+  <div id="secondSection" class="section">
+    <div class="overlay">
+      <div class="sectionHeader">
+        <h1>Section Two Header</h1>
+      </div>
+      <div class="threeColumn blurb">
+        <h2>First Column</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit dolore deleniti, dicta quaerat? Sit corrupti officia iusto perspiciatis! Sed delectus veniam nostrum voluptates neque. Consequuntur necessitatibus ex facilis sequi! Odit tenetur laboriosam tempora quo velit temporibus, architecto quisquam, fugiat rem, culpa expedita cum magnam recusandae eveniet modi in, ducimus voluptates?</p>
+      </div>
+      <div class="threeColumn blurb">
+        <h2>Second Column</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid impedit laborum repellendus, aspernatur dolor ullam voluptatum! Cupiditate repellendus, ad cum cumque totam molestias aliquam modi consectetur, quo iste eveniet deserunt labore omnis, esse quisquam quaerat? Rem facere nemo molestiae consequatur, ullam nulla tempora hic laudantium eos! Deserunt reprehenderit quia illum.</p>
+      </div>
+      <div class="threeColumn blurb">
+        <h2>Third Column</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime a nesciunt cupiditate illum tenetur, consectetur qui reprehenderit odio aliquam libero, incidunt similique hic voluptatibus modi natus explicabo vitae iure facilis. Explicabo dolorem quo quos quisquam assumenda quaerat rem rerum adipisci ratione sequi. Nesciunt earum natus porro molestias, tempora quasi numquam.</p>
+      </div>
+    </div>
+  </div>
+
+
+
+  <div id="thirdSection" class="section">
+    <div class="overlay">
+      <div class="sectionHeader">
+        <h1>Third Section Header</h1>
+      </div>
+      <div id="myGrid">
+        <div class="item small">1<img src="img/placeholder-one.jpeg"></div>
+        <div class="item medium">2<img src="img/placeholder-two.jpeg"></div>
+        <div class="item large">3<img src="img/placeholder-three.jpeg"></div>
+        <div class="item medium">4<img src="img/placeholder-four.jpeg"></div>
+        <div class="item small">5<img src="img/placeholder-five.jpeg"></div>
+        <div class="item large">6<img src="img/placeholder-ten.jpeg"></div>
+        <div class="item medium tall">7<img src="img/placeholder-seven.jpeg"></div>
+        <div class="item medium wide">8<img src="img/placeholder-nine.jpeg"></div>
+      </div>
+    </div>
+  </div>
+
+</div>
+
+  <div class="modal">
+    <span id="closeModal">&times</span>
+    <img src="img/placeholder-ten.jpeg" alt="modal img" class="modalImg">
+  </div>
+
+<script src="js/modal.js"></script>
+<script src="js/jquery.onepage-scroll.min.js"></script>
+<script>
+
+  $(".main").onepage_scroll({
+    sectionContainer: ".section",
+    easing: "ease",
+    animationTime: 1000,
+    pagination: true,
+    updateURL: false,
+    beforeMove: function(index) {},
+    afterMove: function(index) {},
+    loop: true,
+    keyboard: true,
+    responsiveFallback: false,
+    direction: "vertical"
+  });
+
+</script>
 </body>
 </html>
