Fixed a lot of responsive issues
Changed and fixed a lot of issues I had with the responsive design.
Things still not scaling perfect because the 100vh sections.

--- a/index.html
+++ b/index.html
@@ -44,30 +44,13 @@
         <h1>Template Header</h1>
       </div>
 
-      <!--
-      <div id="nav">
-        <div id="menuIcon">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
-
-        <ul id="links">
-          <li><a href="#header">Home</a></li>
-          <li><a href="#secondSection">About</a></li>
-          <li><a href="#thirdSection">Service</a></li>
-          <li><a href="#footer">Contact</a></li>
-        </ul>
-      </div>
-      -->
-
       <div class="blurb">
         <h2>Section Header</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus molestiae voluptatibus fuga incidunt, odio, repellendus, natus, provident accusamus vel facilis magni. Adipisci a at, aperiam officia cumque est modi sequi, voluptates molestiae maiores error, ex! Quae tempora quis accusantium laborum deleniti optio dolore magnam consequatur illum fuga, rem! Dolores facilis eius accusamus optio, quod perferendis harum obcaecati dolor! At in nisi magnam consequuntur sed impedit officia mollitia explicabo exercitationem eligendi, quod atque iusto rerum expedita quia vitae, illo itaque omnis doloribus. Quis assumenda cupiditate facilis, doloremque voluptatum hic eaque adipisci, sunt officia, ratione dicta sint culpa nihil, iusto facere repellendus.</p>
-        <button class="btn one">Button</button>
-        <button class="btn two">Button</button>
-        <button class="btn three">Button</button>
-        <button class="btn four">Button</button>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, dolorum quod! Quod dolore nam est minus quis, ducimus quisquam totam non amet corporis earum repellat alias praesentium voluptate at maxime aperiam modi laborum obcaecati, sequi animi, voluptatum dignissimos. Iure cumque neque ducimus blanditiis a rem amet nemo animi, ullam voluptate, eligendi repellendus. Excepturi accusantium, delectus consectetur tenetur porro voluptas dolores quia quis dolore enim sit facilis dolorem, perspiciatis, tempore eaque.</p>
+        <button class="btn one">Test Left</button>
+        <button class="btn two">Test Right</button>
+        <button class="btn three">Test Top</button>
+        <button class="btn four">Test Bottom</button>
       </div>
     </div>
   </div>
@@ -79,17 +62,19 @@
       <div class="sectionHeader">
         <h1>Section Two Header</h1>
       </div>
-      <div class="threeColumn blurb">
-        <h2>First Column</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit dolore deleniti, dicta quaerat? Sit corrupti officia iusto perspiciatis! Sed delectus veniam nostrum voluptates neque. Consequuntur necessitatibus ex facilis sequi! Odit tenetur laboriosam tempora quo velit temporibus, architecto quisquam, fugiat rem, culpa expedita cum magnam recusandae eveniet modi in, ducimus voluptates?</p>
-      </div>
-      <div class="threeColumn blurb">
-        <h2>Second Column</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid impedit laborum repellendus, aspernatur dolor ullam voluptatum! Cupiditate repellendus, ad cum cumque totam molestias aliquam modi consectetur, quo iste eveniet deserunt labore omnis, esse quisquam quaerat? Rem facere nemo molestiae consequatur, ullam nulla tempora hic laudantium eos! Deserunt reprehenderit quia illum.</p>
-      </div>
-      <div class="threeColumn blurb">
-        <h2>Third Column</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime a nesciunt cupiditate illum tenetur, consectetur qui reprehenderit odio aliquam libero, incidunt similique hic voluptatibus modi natus explicabo vitae iure facilis. Explicabo dolorem quo quos quisquam assumenda quaerat rem rerum adipisci ratione sequi. Nesciunt earum natus porro molestias, tempora quasi numquam.</p>
+      <div id="flex">
+        <div class="threeColumn blurb">
+          <h2>First Column</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur debitis, reiciendis asperiores, sequi laudantium odit labore ad cumque. Nobis quod commodi, aperiam nesciunt veritatis, voluptates fugit beatae dolore neque magni incidunt iste unde minima, quis fuga sapiente. Quod, quia eligendi autem nulla fugiat dolore magni, fugit. Facilis natus, ea nam.</p>
+        </div>
+        <div class="threeColumn blurb">
+          <h2>Second Column</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur debitis, reiciendis asperiores, sequi laudantium odit labore ad cumque. Nobis quod commodi, aperiam nesciunt veritatis, voluptates fugit beatae dolore neque magni incidunt iste unde minima, quis fuga sapiente. Quod, quia eligendi autem nulla fugiat dolore magni, fugit. Facilis natus, ea nam.</p>
+        </div>
+        <div class="threeColumn blurb">
+          <h2>Third Column</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur debitis, reiciendis asperiores, sequi laudantium odit labore ad cumque. Nobis quod commodi, aperiam nesciunt veritatis, voluptates fugit beatae dolore neque magni incidunt iste unde minima, quis fuga sapiente. Quod, quia eligendi autem nulla fugiat dolore magni, fugit. Facilis natus, ea nam.</p>
+        </div>
       </div>
     </div>
   </div>
@@ -122,6 +107,7 @@
   </div>
 
 <script src="js/modal.js"></script>
+<script src="js/collapse.js"></script>
 <script src="js/jquery.onepage-scroll.min.js"></script>
 <script>
 
